--- a/Dự án 1/css/style.css
+++ b/Dự án 1/css/style.css
@@ -507,7 +507,10 @@ footer {
     background-color: rgba(0, 0, 0, 0.8);
 }
 .map{
-    width: 200%;
-    margin-left: 1000px;
+    width: 90%;
+    margin-left: 70px;
 
+}
+.map-text{
+    text-align: center;
 }
