--- a/Dự án 1/css/cart.css
+++ b/Dự án 1/css/cart.css
@@ -8,6 +8,7 @@
     list-style: none;
     text-decoration: none;
     font-family: sans-serif;
+    text-align: center;
 
 }
 nav {
@@ -298,23 +299,34 @@ tr input {
 }
 
 .tongtien {
-    margin-top: 20px;
-    border: 1px solid;
-    float: right;
-    height: 50px;
-    width: 200px;
-    text-align: center;
-    line-height: 50px;
-    border-radius: 10px;
-    font-family: sans-serif;
-
-    transition: .5s;
-
+    padding: 10px 20px;
+    text-transform: uppercase;
+    border-radius: 8px;
+    font-size: 17px;
+    font-weight: 500;
+    color: rgb(78, 78, 233)(0, 0, 255, 0.411);
+    text-shadow: none;
+    background: transparent;
+    box-shadow: transparent;
+    border: 1px solid #00000080;
+    transition: 0.5s ease;
+    user-select: none;
+    font-weight: bold;
 }
 
 .tongtien:hover {
-    color: white;
-    background: green;
-    cursor: pointer;
-    transition: .5s ease-in-out;
+    color: #000000;
+  background: #37a5ff;
+  border: 1px solid #2c6593;
+  text-shadow: 0 0 5px #ffffff,
+              0 0 10px #ffffff,
+              0 0 20px #ffffff;
+   /* box-shadow: 0 0 5px #008cff,
+              0 0 20px #008cff,
+              0 0 50px #008cff,
+              0 0 100px #008cff;  */
+}
+.bang-thanh-toan{
+    width: 60%;
+    margin-left: 300px;
 }
