--- a/Dự án 1/css/lien-he.css
+++ b/Dự án 1/css/lien-he.css
@@ -23,7 +23,7 @@
   .search__input {
     font-family: inherit;
     font-size: inherit;
-    background-color: #000000;
+    background-color: #ffffff;
     color: #646464;
     padding: 0.7rem 1rem;
     border-radius: 30px;
