--- a/Dự án 1/css/style.css
+++ b/Dự án 1/css/style.css
@@ -45,7 +45,7 @@ nav {
     display: flex;
     justify-content: space-between;
     font-size: xx-large;
-    color: white;
+    color: rgb(0, 0, 0);
 
 }
 
