--- a/Dự án 1/css/sanpham.css
+++ b/Dự án 1/css/sanpham.css
@@ -34,3 +34,18 @@ video {
 h1{
     margin: 50px;
 }
+.popup {
+    display: none;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #333;
+    color: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    z-index: 1000;
+    opacity: 0;
+    transition: opacity 0.5s;
+  }
+  
