--- a/Dự án 1/css/style.css
+++ b/Dự án 1/css/style.css
@@ -56,7 +56,7 @@ nav {
 .menu {
     background-color: rgb(130, 104, 66);
 
-    width: 100%;
+    width: 97.35%;
     height: 50px;
     line-height: 50px;
     display: flex;
@@ -507,7 +507,7 @@ footer {
     background-color: rgba(0, 0, 0, 0.8);
 }
 .map{
-    width: 90%;
+    /* width: 90%; */
     margin-left: 70px;
 
 }
