--- a/Dự án 1/css/checkout.css
+++ b/Dự án 1/css/checkout.css
@@ -31,7 +31,7 @@
 
 .logo img {
     transform: scale(1.5);
-    margin-top: -25px;
+    margin-top: -28px;
 }
 
 nav {
@@ -82,22 +82,25 @@ nav {
 }
 
 .menu li {
-    width: 10%;
-    margin-left: 49px;
+    width: 11%;
+    margin-left: 60px;
     text-align: center;
+    
 }
 
 .menu li a {
     color: #fff;
     font-size: x-large;
     font-family: monospace;
+    
 }
 
 .menu li:hover {
     background-color: rgb(197, 172, 102);
     border-radius: 20px;
     transition: .3s;
-    
+   
+  
 }
 
 .menu .search input {
@@ -125,192 +128,7 @@ header {
     margin-top: 70px;
 }
 
-.slideshow-container {
-    position: relative;
-}
 
-header .slideshow-container img {
-    width: 100%;
-    height: 100%;
-}
-
-.slogan {
-    width: 100%;
-    display: flex;
-    align-items: center;
-    background-color: antiquewhite;
-
-}
-
-.slogan img {
-    width: 40%;
-    display: flex;
-    position: relative;
-    left: 27%;
-    margin-top: 40px;
-}
-
-.slogantext {
-    z-index: 1;
-    text-align: center;
-    bottom: 130px;
-    right: 200px;
-    position: relative;
-
-}
-
-.slogantext h2 {
-    font-family: monospace;
-    font-size: xx-large;
-}
-
-article {
-    display: flex;
-}
-
-.khung {
-    margin-top: 50px;
-    margin-left: 10px;
-    width: 22.5%;
-    height: 400px;
-    border-radius: 10px;
-    padding: 10px;
-    border: 1px solid gray;
-}
-
-.khung .hinh {
-    width: 100%;
-    height: 75%;
-
-}
-
-.hinh img {
-    width: 100%;
-    height: 100%;
-    transition: 0.1s ease-in-out;
-
-}
-
-.hinh img:hover {
-    transform: translateY(-3%);
-    transition: 0.1s ease-in-out;
-}
-
-.thongtin {
-    font-family: monospace;
-    font-size: large;
-}
-
-.nutan input {
-    border-radius: 5px;
-    outline: none;
-    height: 30px;
-    margin-left: 15px;
-    border: 1px solid green;
-    background-color: white;
-    cursor: pointer;
-}
-
-.nutan input:hover {
-    background-color: rgb(35, 145, 18);
-    box-shadow: none;
-    color: white;
-    transition: .4s ease-in-out;
-}
-
-.danhmuc {
-    width: 100%;
-    height: 200px;
-    text-align: center;
-}
-
-.danhmuc h1 {
-    line-height: 200px;
-
-}
-
-aside {
-    width: 100%;
-}
-
-.thucan {
-    width: 100%;
-    display: flex;
-}
-
-.hot {
-    padding-left: 20px;
-    height: 10px;
-    display: flex;
-}
-
-.hot i {
-    position: relative;
-    bottom: 4px;
-    margin-left: 10px;
-    font-size: xx-large;
-    color: red;
-}
-
-.gioithieu {
-    margin-left: 20px;
-    margin-top: 50px;
-    display: flex;
-
-
-}
-
-
-.gioithieu i {
-    font-size: xx-large;
-    color: black;
-    position: relative;
-    bottom: 7px;
-    margin-left: 10px;
-}
-
-.phukien {
-    display: flex;
-    margin-top: 50px;
-    margin-left: 20px;
-
-}
-
-.phukien i {
-    padding: 10px;
-    font-size: xx-large;
-    position: relative;
-    bottom: 17px;
-    color: rgb(0, 0, 0);
-}
-
-.spphukien {
-    display: flex;
-}
-
-.more {
-    text-align: center;
-    margin-top: 30px;
-
-}
-
-.more input {
-    border-radius: 5px;
-    height: 35px;
-    outline: none;
-    width: 120px;
-    cursor: pointer;
-    border: 1px solid grey;
-    background-color: white;
-    font-size: medium;
-}
-
-.more input:hover {
-    background: rgb(7, 149, 38);
-    color: white;
-    transform: scale(1.1);
-    transition: .5s ease-in-out;
-}
 
 footer {
     margin-top: 50px;
@@ -418,21 +236,23 @@ footer {
     border-radius: 0px 0 10px 10px;
     width: 200px;
     position: relative;
-    right: 35px;
-    height: 210px;
+    right: 20px;
+    height: 230px;
     bottom: 2px;
     display: none;
     background-color: rgb(130, 104, 66);
+
 }
 
 .menucon li {
     padding-left: 20px;
-    width: 100%;
+    width: 110%;
     text-align: left;
     position: relative;
     right: 60px;
     color: #fff;
     margin-left: 50px;
+    bottom: 1px;
 }
 
 .menu li:hover .menucon {
@@ -508,8 +328,9 @@ footer {
     background-color: rgba(0, 0, 0, 0.8);
 }
 .map{
+    /* width: 90%; */
+    margin-left: 80px;
     width: 90%;
-    margin-left: 70px;
 
 }
 .map-text{
