--- a/Dự án 1/css/blog.css
+++ b/Dự án 1/css/blog.css
@@ -79,7 +79,6 @@ nav {
 .menu li:hover .menucon {
     display: block;
 }
-
 .menu li {
     width: 10%;
     margin-left: 49px;
@@ -122,4 +121,171 @@ header {
     height: 400px;
     margin-bottom: 100px;
     margin-top: 70px;
+}
+.banner img{
+    width: 100%;
+    margin-top: 100px;
+  
+}
+article {
+    display: flex;
+    margin-left: 110px;
+    margin-right: 110px
+}
+
+.khung {
+    margin-top: 50px;
+    margin-left: 20px;
+    width: 50%;
+    height: 400px;
+    /* border-radius: 10px; */
+    padding: 10px;
+    border: 1px solid gray;
+    transition: transform 0.3s, box-shadow 0.3s;
+}
+.khung:hover{
+    /* background-color: lightblue; */
+    border-radius: 5px;
+    box-shadow: 0 0 20px rgba(130, 95, 25, 2);
+}
+
+.khung .hinh {
+    width: 100%;
+    height: 75%;
+
+}
+
+.hinh img {
+    width: 100%;
+    height: 85%;
+    transition: 0.1s ease-in-out;
+
+}
+
+.hinh img:hover {
+    transform: translateY(-3%);
+    transition: 0.1s ease-in-out;
+}
+
+.thongtin {
+    font-family: monospace;
+    font-size: large;
+}
+
+.nutan input {
+    /* border-radius: 5px; */
+    outline: none;
+    height: 30px;
+    margin-left: 15px;
+    border: 1px solid green;
+    background-color: white;
+    cursor: pointer;
+}
+
+.nutan input:hover {
+    background-color: rgb(198, 167, 41);
+    box-shadow: none;
+    color: white;
+    transition: .2s ease-in-out;
+}
+footer {
+    margin-top: 50px;
+    margin-bottom: 20px;
+    width: 100%;
+    border-top: 1px solid gray;
+}
+
+.tuvan {
+    width: 100%;
+    text-align: center;
+}
+
+.tuvan h1 {
+    padding: 20px;
+}
+
+.tuvan input {
+    padding: 10px;
+    margin: 10px;
+    border-radius: 10px;
+    border: 1px solid grey;
+    background: white;
+    outline: none;
+    width: 250px;
+}
+
+.tuvan .send {
+    width: 100px;
+}
+
+.tuvan button {
+    height: 35px;
+    border-radius: 10px;
+    border: 1px;
+    color: white;
+    background: rgb(122, 122, 226);
+}
+
+.tuvan button:hover {
+    background: black;
+    cursor: pointer;
+    transition: .5s ease-in-out;
+    transform: scale(1.1);
+}
+
+.end {
+
+    width: 100%;
+    /* background: red; */
+    display: flex;
+}
+
+.end .about {
+    width: 20%;
+    padding: 30px;
+    line-height: 30px;
+    margin-left: 150px;
+
+}
+
+.end .about li:hover {
+    cursor: pointer;
+    color: blueviolet;
+}
+
+.end .thongtinbanquyen {
+    width: 25%;
+    padding: 30px;
+    line-height: 30px;
+    margin-left: 150px;
+}
+
+.end .thongtinbanquyen li:hover {
+    color: blueviolet;
+    cursor: pointer;
+}
+
+.end .hotro {
+    width: 25%;
+    padding: 30px;
+    line-height: 30px;
+}
+
+.end .hotro li:hover {
+    color: blueviolet;
+    cursor: pointer;
+}
+
+.banquyen {
+    width: 100%;
+    text-align: center;
+}
+
+.banquyen a {
+    color: black;
+}
+
+.hotro img {
+    width: 70%;
+
 }
