--- a/Dự án 1/css/style.css
+++ b/Dự án 1/css/style.css
@@ -9,6 +9,11 @@
     text-decoration: none;
     font-family: sans-serif;
 }
+.body{
+    height: 100%;
+    margin: 0;
+    display: block;
+}
 
 .head {
     height: 90px;
